--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-image": "~1.12.13",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "lucide-react-native": "^0.419.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
