feat: register storage layouts

--- a/app.json
+++ b/app.json
@@ -21,7 +21,15 @@
         {
           "fonts": ["./assets/fonts/Poppins-Black.ttf"]
         }
+      ],[
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+          "recordAudioAndroid": true
+        }
       ]
+
     ]
   }
 }
